Alterado posicao do botao voltar

--- a/sorteador/src/screens/escalacao/style.css
+++ b/sorteador/src/screens/escalacao/style.css
@@ -30,10 +30,11 @@
 }
 
 .voltar{
+    height: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
     position: absolute;
+    top: 150px;
    
 }
 
